security/manager/ssl/src/nsNSSIOLayer.h: [-Wunused-private-field] private field 'mHandshakeStartTime' is not used
RESOLVED
FIXED
in Firefox 28
Status
()
People
(Reporter: cpeterson, Assigned: cpeterson)
Tracking
(Blocks: 1 bug)
Firefox Tracking Flags
(firefox27 unaffected, firefox28 fixed)
Details
(Whiteboard: [qa-])
Attachments
(1 attachment)
961 bytes,
patch
|
briansmith
:
review+
|
Details | Diff | Splinter Review |
Created attachment 830610 [details] [diff] [review] patch Fix -Wunused-private-field warnings where bug 754356 removed the use of these member variables, but not their definitions. security/manager/ssl/src/nsNSSIOLayer.h:128:18 [-Wunused-private-field] private field 'mHandshakeStartTime' is not used security/manager/ssl/src/nsNSSIOLayer.h:129:8 [-Wunused-private-field] private field 'mFirstServerHelloReceived' is not used
Attachment #830610 -
Flags: review?(brian)
Updated•5 years ago
|
Attachment #830610 -
Flags: review?(brian) → review+
Updated•5 years ago
|
Keywords: checkin-needed
Comment 1•5 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/bedf2af5d452
Keywords: checkin-needed
Comment 2•5 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/bedf2af5d452
Status: ASSIGNED → RESOLVED
Last Resolved: 5 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
![]() |
||
Updated•5 years ago
|
status-firefox28: affected → fixed
Updated•4 years ago
|
Whiteboard: [qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•