Bug 937459 - Remove unused private fields from nsNSSSocketInfo class. r=briansmith