security/manager/ssl/src/nsNSSIOLayer.h
@@ -125,8 +125,6 @@ private:
   bool mHasCleartextPhase;
   bool mRememberClientAuthCertificate;
   bool mPreliminaryHandshakeDone; // after false start items are complete
-  PRIntervalTime mHandshakeStartTime;
-  bool mFirstServerHelloReceived;
 
   nsresult ActivateSSL();
 
